Fri Jun 27 15:20:12 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/test_case.rb: rescue Gem::LoadError in Gem::TestCase.
	  because it's effected by removing minitest from stdlib.

Fri Jun 27 12:29:37 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/specification.rb: fixed broken condition caused
	  by removing YAML::ENGINE.
	* lib/rubygems/package/old.rb: ditto.

Fri Jun 27 05:33:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_shift): fix memory leak on Windows, free environment
	  strings block always.  [ruby-dev:48332] [Bug #9983]

Fri Jun 27 03:41:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (GETASTER): should not use the numbered argument to be
	  formatted, raise ArgumentError instead.
	  [ruby-dev:48330] [Bug #9982]

Thu Jun 26 18:18:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/with_different_ofs.rb: move into test library directory.
	* test/csv/base.rb: fix require path for with_different_ofs.rb.
	* test/digest/test_digest_extend.rb: ditto.

Thu Jun 26 18:06:50 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/profile_test_all.rb: move into test library directory.
	* test/runner.rb: fix require path for profile_test_all.rb.

Thu Jun 26 17:57:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/httpproxy.rb: remove useless assigned variables.
	* lib/webrick/httpservlet/cgihandler.rb: ditto.
	* lib/webrick/httpservlet/erbhandler.rb: ditto.
	* lib/webrick/server.rb: ditto.

Thu Jun 26 08:28:01 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_select): fix memory leak and crash on Windows, make
	  keys array first instead of iterating on environ directly.
	  [ruby-dev:48325] [Bug #9978]

Thu Jun 26 02:45:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (error_print): put a newline after an anonymous
	  exception class name.

Wed Jun 25 22:31:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
